tests/purs/failing/InstanceSigsDifferentTypes.out
Error found:
in module [33mMain[0m
at tests/purs/failing/InstanceSigsDifferentTypes.purs:10:9 - 10:12 (line 10, column 9 - line 10, column 12)

  Could not match type
  [33m        [0m
  [33m  Number[0m
  [33m        [0m
  with type
  [33m     [0m
  [33m  Int[0m
  [33m     [0m

while checking that type [33mNumber[0m
  is at least as general as type [33mInt[0m
while checking that expression [33m0.0[0m
  has type [33mInt[0m
while matching label [33mfoo[0m
in value declaration [33mfooNumber[0m

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

